--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WDD231 | Home</title>
     <meta name="description" content="WDD231 - Home page of your Web & Computer Programming Certificate progress." />
     <meta name="author" content="Ikechukwu Kelvin" />
-    <title>WDD231 | Home</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/small.css" />
     <link rel="stylesheet" href="styles/large.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/course.js" defer></script>
   </head>
   <body>
     <header>
-      <img src="images/logo.svg" alt="Site Logo" />
+      <img src="images/logo.png" alt="Site Logo" />
       <span>Your Name</span>
       <button id="menu" aria-label="Toggle Navigation"></button>
     </header>
@@ -51,13 +51,13 @@
         <p>Keep track of your learning journey and project progress.</p>
         <div class="social">
           <a href="https://linkedin.com">
-            <img src="images/linkedin.png" alt="LinkedIn">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Logo" width="32" height="32">
           </a>
           <a href="https://github.com">
-            <img src="images/github.png" alt="GitHub">
+            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" width="32" height="32">
           </a>
           <a href="https://twitter.com">
-            <img src="images/twitter.png" alt="Twitter">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023.svg" alt="X (Twitter) Logo" width="32" height="32">
           </a>
         </div>
       </section>
