--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD231 | Home</title>
-    <meta name="description" content="WDD231 - Home page of your Web & Computer Programming Certificate progress." />
-    <meta name="author" content="Ikechukwu Kelvin" />
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/small.css" />
-    <link rel="stylesheet" href="styles/large.css" />
+    <meta name="description" content="WDD231 - Home page of your Web & Computer Programming Certificate progress.">
+    <meta name="author" content="Ikechukwu Kelvin">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png" alt="Site Logo" />
+      <img src="images/logo.png" alt="Site Logo">
       <span>Your Name</span>
       <button id="menu" aria-label="Toggle Navigation"></button>
     </header>
