--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD231 | Home</title>
     <meta name="description" content="WDD231 - Home page of your Web & Computer Programming Certificate progress.">
     <meta name="author" content="Ikechukwu Kelvin">
+    <title> Ikechukwu kelvin - WDD 231 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/large.css">
@@ -57,7 +57,7 @@
             <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" width="32" height="32">
           </a>
           <a href="https://twitter.com">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023.svg" alt="X (Twitter) Logo" width="32" height="32">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" width="40">
           </a>
         </div>
       </section>
