--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riverbend Chamber of Commerce | Business Directory</title>
     <meta name="description" content="Official business member directory for the Riverbend Chamber of Commerce." />
-    <meta name="author" content="Your Full Name" />
+    <meta name="author" content="Ikechukwu Kelvin Chichi">
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Open Graph Meta for Facebook -->
-    <meta property="og:title" content="Riverbend Chamber of Commerce Directory" />
-    <meta property="og:description" content="Find local businesses and members of the Riverbend Chamber." />
-    <meta property="og:image" content="images/chamber-banner.jpg" />
-    <meta property="og:url" content="https://yourgithubusername.github.io/wdd231/chamber/directory.html" />
+    <meta property="og:title" content="Riverbend Chamber of Commerce Directory">
+    <meta property="og:description" content="Find local businesses and members of the Riverbend Chamber.">
+    <meta property="og:image" content="images/chamber-banner.jpg">
+    <meta property="og:url" content="https://yourgithubusername.github.io/wdd231/chamber/directory.html">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
 
     <!-- JS -->
     <script src="scripts/directory.js" defer></script>
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-      <p>&copy; <span id="year"></span> Riverbend Chamber | Your Name | WDD 231</p>
+      <p>&copy; <span id="year"></span> Riverbend Chamber | Ikechukwu Kelvin Chichi | WDD 231</p>
       <p id="lastModified"></p>
       <p>Contact us: info@riverbendchamber.org | (555) 123-4567</p>
     </footer>
