--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/large.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/course.js" defer></script>
@@ -47,9 +49,10 @@
         <div id="courses-container"></div>
         <p>Total Credits: <span id="creditTotal">0</span></p>
       </section>
-      <section>
-        <p>Keep track of your learning journey and project progress.</p>
-        <div class="social">
+    </main>
+
+    <footer>
+      <div class="social">
           <a href="https://linkedin.com">
             <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Logo" width="32" height="32">
           </a>
@@ -60,10 +63,6 @@
             <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" width="40">
           </a>
         </div>
-      </section>
-    </main>
-
-    <footer>
       <p>&copy; <span id="currentyear"></span> 🌴Ikechukwu Kelvin Chichi 🌴 Delta, Nigeria</p>
       <p id="lastModified"></p>
     </footer>
