--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -19,13 +19,13 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- JS -->
     <script src="scripts/directory.js" defer></script>
   </head>
   <body>
     <header>
-      <h1>Riverbend Chamber of Commerce</h1>
+      <h1>Chamber of Commerce</h1>
       <nav>
         <button id="menu">☰ Menu</button>
         <ul id="nav-list">
