--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,7 +14,10 @@
     <meta property="og:title" content="Riverbend Chamber of Commerce Directory">
     <meta property="og:description" content="Find local businesses and members of the Riverbend Chamber.">
     <meta property="og:image" content="images/chamber-banner.jpg">
-    <meta property="og:url" content="https://yourgithubusername.github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://ikechukwukelvin.github.io/wdd231/chamber/directory.html">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Riverbend Chamber of Commerce Directory">
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/normalize.css">
@@ -25,7 +28,7 @@
   </head>
   <body>
     <header>
-      <h1>Chamber of Commerce</h1>
+      <h1>Riverbend Chamber of Commerce </h1>
       <nav>
         <button id="menu">☰ Menu</button>
         <ul id="nav-list">
