--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,7 +13,7 @@
     <!-- Open Graph Meta for Facebook -->
     <meta property="og:title" content="Riverbend Chamber of Commerce Directory">
     <meta property="og:description" content="Find local businesses and members of the Riverbend Chamber.">
-    <meta property="og:image" content="images/chamber-banner.jpg">
+    <meta property="og:image" content="chamber/images/chamber-logo.jpg">
     <meta property="og:url" content="https://ikechukwukelvin.github.io/wdd231/chamber/directory.html">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header>
-      <h1>Riverbend Chamber of Commerce </h1>
+      <h1>Chamber Directory </h1>
       <nav>
         <button id="menu">☰ Menu</button>
         <ul id="nav-list">
