--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Ikechukwu Kelvin Chichi">
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="chamber/images/favicon.ico" type="image/x-icon">
 
     <!-- Open Graph Meta for Facebook -->
     <meta property="og:title" content="Riverbend Chamber of Commerce Directory">
@@ -19,6 +19,10 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Riverbend Chamber of Commerce Directory">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <!-- CSS -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -28,7 +32,7 @@
   </head>
   <body>
     <header>
-      <h1>Chamber Directory </h1>
+      <h1>Welcome to the Riverbend Chamber of Commerce</h1>
       <nav>
         <button id="menu">☰ Menu</button>
         <ul id="nav-list">
