--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riverbend Chamber of Commerce | Business Directory</title>
+    <title>Riverbend Chamber of Commerce</title>
     <meta name="description" content="Official business member directory for the Riverbend Chamber of Commerce." />
     <meta name="author" content="Ikechukwu Kelvin Chichi">
 
