--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <img src="images/logo.png" alt="Site Logo">
-      <span>Your Name</span>
+      <span>Kelvin</span>
       <button id="menu" aria-label="Toggle Navigation"></button>
     </header>
 
