--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -48,7 +48,7 @@
       <section class="hero">
         <h1>Welcome to the Riverbend Chamber of Commerce</h1>
         <p>Connecting businesses, promoting growth, and building a stronger Riverbend.</p>
-        <a href="membership.html" class="cta-btn">Join Now</a>
+        <a href="join.html" class="cta-btn">Join Now</a>
       </section>
 
       <div class="view-toggle">
@@ -61,7 +61,7 @@
     <footer>
       <p>&copy; <span id="year"></span> Riverbend Chamber | Ikechukwu Kelvin Chichi | WDD 231</p>
       <p id="lastModified"></p>
-      <p>Contact us: info@riverbendchamber.org | (555) 123-4567</p>
+      <p>Contact us: ichichi@byupathway.edu | (234) 7033725224</p>
     </footer>
   </body>
 </html>
