--- a/chamber/index.html
+++ b/chamber/index.html
@@ -75,7 +75,7 @@
     <footer>
       <p>&copy; <span id="year"></span> Riverbend Chamber | Ikechukwu Kelvin Chichi | WDD 231</p>
       <p id="lastModified"></p>
-      <p>Contact us: info@riverbendchamber.org | (555) 123-4567</p>
+      <p>Contact us: ichichi@byupathway.edu | (234) 7033725224</p>
     </footer>
   </body>
 </html>
