--- a/chamber/join.html
+++ b/chamber/join.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">Riverbend Chamber of Commerce</div>
+      <h1>Riverbend Chamber of Commerce</h1>
       <nav>
         <ul id="nav-links">
           <li><a href="index.html">Home</a></li>
