--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,18 +3,43 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Thank You</title>
-        <link rel="stylesheet" href="styles.css">
+        <title>Riverbend Chamber of Commerce</title>
+        <meta name="description" content="Official business member directory for the Riverbend Chamber of Commerce." />
+        <meta name="author" content="Ikechukwu Kelvin Chichi">
+
+        <!-- Favicon -->
+        <link rel="icon" href="chamber/images/favicon.ico" type="image/x-icon">
+
+        <!-- Open Graph Meta for Facebook -->
+        <meta property="og:title" content="Riverbend Chamber of Commerce Directory">
+        <meta property="og:description" content="Find local businesses and members of the Riverbend Chamber.">
+        <meta property="og:image" content="https://ikechukwukelvin.github.io/wdd231/chamber/images/chamber-logo.jpg">
+        <meta property="og:url" content="https://ikechukwukelvin.github.io/wdd231/chamber/join.html">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Riverbend Chamber of Commerce Directory">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/base.css">
+        <!-- JS -->
+        <script src="scripts/join.js" defer></script>
     </head>
     <body>
         <header>
             <h1>Chamber of Commerce</h1>
             <nav>
-                <ul>
+                <ul id="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="directory.html">Directory</a></li>
-                    <li><a href="join.html">Join</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="join.html" aria-current="page">Join</a></li>
+                    <li><a href="discover.html">Discover</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
         </header>
