--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Ikechukwu Kelvin Chichi">
 
     <!-- Favicon -->
-    <link rel="icon" href="chamber/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Open Graph Meta for Facebook -->
     <meta property="og:title" content="Riverbend Chamber of Commerce Directory">
@@ -39,8 +39,8 @@
           <li><a href="directory.html">Directory</a></li>
           <li><a href="join.html">join</a></li>
           <li><a href="discover.html">Discover</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="about.html">About Us</a></li>
+          <li><a href="index.html">Events</a></li>
+          <li><a href="join.html">About Us</a></li>
         </ul>
       </nav>
     </header>
