--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Ikechukwu Kelvin Chichi">
 
         <!-- Favicon -->
-        <link rel="icon" href="chamber/images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
         <!-- Open Graph Meta for Facebook -->
         <meta property="og:title" content="Riverbend Chamber of Commerce Directory">
@@ -31,15 +31,15 @@
     </head>
     <body>
         <header>
-            <h1>Chamber of Commerce</h1>
+            <h1>Riverbend Chamber of Commerce</h1>
             <nav>
                 <ul id="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html" aria-current="page">Join</a></li>
                     <li><a href="discover.html">Discover</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="index.html">Events</a></li>
+                    <li><a href="join.html">About Us</a></li>
                 </ul>
             </nav>
         </header>
