--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <nav id="navigation">
       <a href="index.html">Home</a>
-      <a href="chamber/directory.html">Chamber Project</a>
-      <a href="#">Final Project</a>
+      <a href="chamber/index.html">Chamber Project</a>
+      <a href="finalproject/index.html">Final Project</a>
     </nav>
 
     <main>
